--- a/app/src/main/res/layout/activity_user_show.xml
+++ b/app/src/main/res/layout/activity_user_show.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_home"
+    android:id="@+id/activity_user_show"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="fr.imie.am.carloc.view.HomeActivity">
+    tools:context="fr.imie.am.carloc.view.UserShowActivity"
+    android:orientation="vertical">
+
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:name="fr.imie.am.carloc.view.UserShowFragment"/>
 
     <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/homeFragment"
-        android:name="fr.imie.am.carloc.view.HomeFragment"
-        tools:layout="@layout/fragment_home" />
-</RelativeLayout>
+        android:name="fr.imie.am.carloc.view.VehiculeListFragment"/>
+
+</LinearLayout>
